# test-test

./: README.md  build.spec  main.py  pyproject.toml  requirements.txt
resources/themes/: dark.qss
src/: __init__.py
src/auth/: __init__.py  microsoft.py  offline.py
src/core/: __init__.py  game_launcher.py
src/modloaders/: __init__.py  modloader_manager.py
src/runtime/: __init__.py  java_manager.py
src/ui/: __init__.py  auth_dialog.py  main.py
src/updater/: __init__.py  auto_updater.py
src/utils/: __init__.py  async_http.py  logger.py
src/versions/: __init__.py  download_manager.py  manager.py  models.py
tests/: test_auth.py
