[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-minecraft-launcher"
version = "0.1.0"
description = "A production-quality custom Minecraft launcher in Python"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "msal>=1.24.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.1.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "PyQt6>=6.5.0",
    "qasync>=0.26.0",
    "patool>=1.12",
    "pytest>=7.3.0",
    "black>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
launcher = "src.ui.main:main"
